added some fixes from comments